log/build_2022-04-23_08-35-28/socketcan_interface/stdout_stderr.log

[0/2] Building CXX object CMakeFiles/socketcan_interface_node.dir/src/socketcan_interface_node.cpp.o[K
[1/2] Building CXX object CMakeFiles/socketcan_interface_node.dir/src/socketcan_interface_node.cpp.o[K
[31mFAILED: [0mCMakeFiles/socketcan_interface_node.dir/src/socketcan_interface_node.cpp.o 
/usr/bin/c++  -DDEFAULT_RMW_IMPLEMENTATION=rmw_cyclonedds_cpp -DRCUTILS_ENABLE_FAULT_INJECTION -DSOCKETCAN_INTERFACE_LIBRARY -I/home/ryuzot/ros2_ws/src/socketcan_interface/include -isystem /home/ryuzot/ros2_ws/install/socketcan_interface_msg/include -isystem /opt/ros/galactic/include -Wall -Wextra -Wpedantic -std=gnu++17 -MD -MT CMakeFiles/socketcan_interface_node.dir/src/socketcan_interface_node.cpp.o -MF CMakeFiles/socketcan_interface_node.dir/src/socketcan_interface_node.cpp.o.d -o CMakeFiles/socketcan_interface_node.dir/src/socketcan_interface_node.cpp.o -c /home/ryuzot/ros2_ws/src/socketcan_interface/src/socketcan_interface_node.cpp
In file included from /home/ryuzot/ros2_ws/src/socketcan_interface/src/socketcan_interface_node.cpp:11:
/usr/include/x86_64-linux-gnu/bits/fcntl.h:20:3: error: #error "Never use <bits/fcntl.h> directly; include <fcntl.h> instead."
   20 | # error "Never use <bits/fcntl.h> directly; include <fcntl.h> instead."
      |   ^~~~~
In file included from /usr/include/x86_64-linux-gnu/bits/fcntl.h:61,
                 from /home/ryuzot/ros2_ws/src/socketcan_interface/src/socketcan_interface_node.cpp:11:
/usr/include/x86_64-linux-gnu/bits/fcntl-linux.h:20:3: error: #error "Never use <bits/fcntl-linux.h> directly; include <fcntl.h> instead."
   20 | # error "Never use <bits/fcntl-linux.h> directly; include <fcntl.h> instead."
      |   ^~~~~
In file included from /usr/include/fcntl.h:35,
                 from /home/ryuzot/ros2_ws/src/socketcan_interface/src/socketcan_interface_node.cpp:12:
/usr/include/x86_64-linux-gnu/bits/fcntl.h:35:8: error: redefinition of ‘struct flock’
   35 | struct flock
      |        ^~~~~
In file included from /home/ryuzot/ros2_ws/src/socketcan_interface/src/socketcan_interface_node.cpp:11:
/usr/include/x86_64-linux-gnu/bits/fcntl.h:35:8: note: previous definition of ‘struct flock’
   35 | struct flock
      |        ^~~~~
In file included from /usr/include/fcntl.h:35,
                 from /home/ryuzot/ros2_ws/src/socketcan_interface/src/socketcan_interface_node.cpp:12:
/usr/include/x86_64-linux-gnu/bits/fcntl.h:50:8: error: redefinition of ‘struct flock64’
   50 | struct flock64
      |        ^~~~~~~
In file included from /home/ryuzot/ros2_ws/src/socketcan_interface/src/socketcan_interface_node.cpp:11:
/usr/include/x86_64-linux-gnu/bits/fcntl.h:50:8: note: previous definition of ‘struct flock64’
   50 | struct flock64
      |        ^~~~~~~
In file included from /usr/include/x86_64-linux-gnu/bits/fcntl.h:61,
                 from /usr/include/fcntl.h:35,
                 from /home/ryuzot/ros2_ws/src/socketcan_interface/src/socketcan_interface_node.cpp:12:
/usr/include/x86_64-linux-gnu/bits/fcntl-linux.h:265:6: error: multiple definition of ‘enum __pid_type’
  265 | enum __pid_type
      |      ^~~~~~~~~~
In file included from /usr/include/x86_64-linux-gnu/bits/fcntl.h:61,
                 from /home/ryuzot/ros2_ws/src/socketcan_interface/src/socketcan_interface_node.cpp:11:
/usr/include/x86_64-linux-gnu/bits/fcntl-linux.h:265:6: note: previous definition here
  265 | enum __pid_type
      |      ^~~~~~~~~~
In file included from /usr/include/x86_64-linux-gnu/bits/fcntl.h:61,
                 from /usr/include/fcntl.h:35,
                 from /home/ryuzot/ros2_ws/src/socketcan_interface/src/socketcan_interface_node.cpp:12:
/usr/include/x86_64-linux-gnu/bits/fcntl-linux.h:274:8: error: redefinition of ‘struct f_owner_ex’
  274 | struct f_owner_ex
      |        ^~~~~~~~~~
In file included from /usr/include/x86_64-linux-gnu/bits/fcntl.h:61,
                 from /home/ryuzot/ros2_ws/src/socketcan_interface/src/socketcan_interface_node.cpp:11:
/usr/include/x86_64-linux-gnu/bits/fcntl-linux.h:274:8: note: previous definition of ‘struct f_owner_ex’
  274 | struct f_owner_ex
      |        ^~~~~~~~~~
In file included from /usr/include/x86_64-linux-gnu/bits/fcntl.h:61,
                 from /usr/include/fcntl.h:35,
                 from /home/ryuzot/ros2_ws/src/socketcan_interface/src/socketcan_interface_node.cpp:12:
/usr/include/x86_64-linux-gnu/bits/fcntl-linux.h:357:8: error: redefinition of ‘struct file_handle’
  357 | struct file_handle
      |        ^~~~~~~~~~~
In file included from /usr/include/x86_64-linux-gnu/bits/fcntl.h:61,
                 from /home/ryuzot/ros2_ws/src/socketcan_interface/src/socketcan_interface_node.cpp:11:
/usr/include/x86_64-linux-gnu/bits/fcntl-linux.h:357:8: note: previous definition of ‘struct file_handle’
  357 | struct file_handle
      |        ^~~~~~~~~~~
/home/ryuzot/ros2_ws/src/socketcan_interface/src/socketcan_interface_node.cpp: In constructor ‘socketcan_interface::SocketcanInterface::SocketcanInterface(const string&, const rclcpp::NodeOptions&)’:
/home/ryuzot/ros2_ws/src/socketcan_interface/src/socketcan_interface_node.cpp:21:63: warning: unused parameter ‘name_space’ [-Wunused-parameter]
   21 |     SocketcanInterface::SocketcanInterface(const std::string &name_space, const rclcpp::NodeOptions &options)
      |                                            ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
ninja: build stopped: subcommand failed.
